# lab3

./: CMakeLists.txt  icms.cpp  icms.h  iimposto.cpp  iimposto.h  ipi.cpp  ipi.h  iproduto.cpp  iproduto.h  main.cpp  produtoalimenticio.cpp  produtoalimenticio.h  produtoeletronico.cpp  produtoeletronico.h
